--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -214,7 +214,7 @@
     // Platform name
     // Options: 'picroft', 'mycroft_mark_1'
     // Override: SYSTEM (set by specific enclosures)
-    # "platform": "picroft",
+    "platform": "zPod_v1",
     # "platform_enclosure_path": "/etc/myenclosure/code.py",
 
     // COMM params to the Arduino/faceplate
